--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,7 @@ code, kbd, pre, samp {
     background: #eceff1;
     color: #212121;
     font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
+    white-space: pre-wrap;}
 
 img {
     max-height : 100%;
@@ -149,7 +149,7 @@ a, a *{
 
 blockquote {
     padding: 5px 1rem;
-    margin: 0.3rem 0;
+    margin: 5px 0;
     border-left: #9e9e9e 4px solid;
 }
 
