--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 }
 
 *, :after, :before {
-    box-sizing: inherit;
+    box-sizing: border-box
 }
 
 html {
@@ -13,20 +13,18 @@ html {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 1rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 14px;
     font-weight: 400;
     line-height: 1.5;
     text-align: left;
 }
 
 .markdown {
+    font-size: 16px;
     color: #3b454e;
-    padding: 1rem 0;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto
+    padding: 1rem 15px;
+    margin: 0 auto;
 }
 
 table {
@@ -55,12 +53,12 @@ td {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
+    font-weight: 600
 }
 h1, h2, h3 {
-    padding: 1rem 0 0.77rem;
-    margin-top: 1rem;
-    border-top: #d3dce4 1px solid;
+    padding: 1rem 0 0.3em;
+    margin-bottom: 1rem;
+    border-bottom: #d3dce4 1px solid;
 }
 
 h4, h5, h6 {
@@ -92,20 +90,13 @@ summary {
     cursor: pointer;
 }
 
-
 hr {
-    border: none;
+    border: 0;
     border-top: solid #d3dce4 1px;
-    margin: 1rem 0;
+    margin: 15px 0;
 }
-p { padding: 8px 0 }
 
-h1 b,
-h2 b,
-h3 b,
-h4 b,
-h5 b,
-h6 b { font-weight: 800 }
+p { padding: 8px 0 }
 
 b { font-weight: 700 }
 
@@ -116,18 +107,7 @@ dd, li { margin: 0 0 5px }
 code, kbd, pre, samp {
     background: #eceff1;
     color: #212121;
-    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-    white-space: pre-wrap;}
-
-img {
-    max-height : 100%;
-    max-width : 100%;
-    width : auto;
-    height : auto;
-    margin: 0.5rem 0;
-}
-td img {
-    margin: 0;
+    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
 }
 
 pre {
@@ -141,10 +121,24 @@ code {
     border-radius: 3px;
 }
 
+img {
+    max-height : 100%;
+    max-width : 100%;
+    width : auto;
+    height : auto;
+    margin: 0.5rem 0;
+}
+td img {
+    margin: 0;
+}
+
 a, a *{
     color: #00a2e8;
     text-decoration: none;
     font-weight: 500;
+}
+a:hover {
+    text-decoration: underline
 }
 
 blockquote {
