--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .markdown {
-    font-size: 16px;
+    font-size: 1rem;
     color: #3b454e;
     padding: 1rem 15px;
     margin: 0 auto;
