--- a/style/style.css
+++ b/style/style.css
@@ -54,7 +54,8 @@ td {
     border-top: #d3dce4 1px solid;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: 600
 }
 h1, h2, h3 {
@@ -67,12 +68,12 @@ h4, h5, h6 {
     padding: .5rem 0;
 }
 
-h1 { font-size: calc(1.375rem + 1.5vw) }
-h2 { font-size: calc(1.325rem + .9vw) }
-h3 { font-size: calc(1.3rem + .6vw) }
-h4 { font-size: calc(1.275rem + .3vw) }
-h5 { font-size: 1.25rem }
-h6 { font-size: 1rem }
+h1, .h1 { font-size: calc(1.375rem + 1.5vw) }
+h2, .h2 { font-size: calc(1.325rem + .9vw) }
+h3, .h3 { font-size: calc(1.3rem + .6vw) }
+h4, .h4 { font-size: calc(1.275rem + .3vw) }
+h5, .h5 { font-size: 1.25rem }
+h6, .h6 { font-size: 1rem }
 
 details {
     display: block;
@@ -121,6 +122,7 @@ pre {
     padding: 4px 10px;
     margin: 0.6rem 0px;
     overflow-y: auto;
+    max-height: 80vh;
 }
 
 code {
@@ -147,6 +149,22 @@ a, a *{
 }
 a:hover {
     text-decoration: underline
+}
+
+#alinks {
+    display: none;
+    text-decoration: none!important;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    color: white;
+    background: #3b454e;
+    padding: 0 0.3rem;
+    padding-bottom: 3px;
+    text-transform: lowercase;
+    font-weight: lighter;
+    border-radius: 0 3px 0 0;
+    font-size: 0.87rem;
 }
 
 blockquote {
@@ -178,6 +196,14 @@ div.success, div.warning, div.info {
 .light { font-weight: 300!important }
 .center { text-align: center!important }
 .uppercase { text-transform: uppercase!important }
+
+.red { color:red }
+.orange { color:orange }
+.green { color:green }
+.yellow { color:yellow }
+.blue { color:blue }
+.purple { color:purple }
+.gray { color:gray }
 
 input {
     border: none;
