--- a/style/style.css
+++ b/style/style.css
@@ -20,12 +20,20 @@ body {
     text-align: left;
     display: none;
     background: #0d1117;
+    scrollbar-face-color: #262b32;
+    scrollbar-track-color: #0a0d14;
+    scrollbar-arrow-color: #363b42;
+    scrollbar-shadow-color: #0a0d14;
 }
+
+::-webkit-scrollbar { width: 1rem;}
+::-webkit-scrollbar-track { background: #0a0d14 }
+::-webkit-scrollbar-thumb { background: #262b32; border: 1px #0a0d14 solid; }
 
 #navbar {
     background: #161b22;
     color: #fff;
-    font-weight: bold;
+    font-weight: font-weight: 700;
     overflow: hidden;
 }
 #navbar h1{
@@ -54,6 +62,7 @@ table {
     border: 1px solid #30363d;
     border-radius: 4px;
     display: block;
+    overflow: auto;
 }
 
 th, td {
@@ -160,7 +169,7 @@ td img {
     margin: 0;
 }
 
-.center img {
+.center img, .l img, .c img, .r img {
     margin: 0.5rem 0;
 }
 
@@ -261,9 +270,13 @@ input {
     .markdown { max-width: 1320px }
 }
 
+.center, .c { text-align: center }
+.right, .r {text-align: right}
+.left, .l {text-align: left}
+
 .light { font-weight: 300 }
-.center { text-align: center }
-.right {text-align: right}
+.bold { font-weight: 700 }
+
 .uppercase { text-transform: uppercase }
 .p-2 { padding: .5rem }
 .p-4 { padding: 1.5rem }
@@ -272,8 +285,8 @@ input {
 
 .red { color:#ff5252 }
 .orange { color:#ffab40 }
-.green { color:green }
-.yellow { color:yellow }
+.green { color:#00e676 }
+.yellow { color:#ffeb3b  }
 .blue { color:#2196f3 }
-.purple { color:purple }
-.gray { color:gray }
+.purple { color:#e040fb  }
+.gray { color:#9e9e9e  }
