--- a/style/style.css
+++ b/style/style.css
@@ -244,10 +244,11 @@ input {
 
 .labels { color: #009688 }
 .keywords { color: #ff5722 }
-.numbers { color: #7e57c2 }
 .models { color: #7091a0 }
 .classes { color: #7091a0 }
 .commands { color: #0288d1 }
+.numbers,
+.numbers * { color: #7e57c2 }
 .variables { color: #7091a0 }
 .strings,
 .strings * { color: #ffd54f }
