--- a/style/style.css
+++ b/style/style.css
@@ -1,36 +1,37 @@
 * {
 	margin: 0;
 	padding: 0;
-    /*outline: 1px solid cadetblue;*/
+	/*outline: 1px solid cadetblue;*/
 }
 
 *, :after, :before {
-    box-sizing: border-box
+	box-sizing: border-box
 }
 
 html {
-    font-family: sans-serif;
-    line-height: 1.15;
-    background: #0d1117;
-    color: #c9d1d9;
+	font-family: sans-serif;
+	line-height: 1.15;
+	background: #0d1117;
+	color: #c9d1d9;
+	/*transition: background .2s;*/
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: left;
-    display: none;
-    scrollbar-face-color: #262b32;
-    scrollbar-track-color: #0a0d14;
-    scrollbar-arrow-color: #363b42;
-    scrollbar-shadow-color: #0a0d14;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.5;
+	text-align: left;
+	display: none;
+	scrollbar-face-color: #262b32;
+	scrollbar-track-color: #0a0d14;
+	scrollbar-arrow-color: #363b42;
+	scrollbar-shadow-color: #0a0d14;
 }
 
 .light-mode {
-    background: #fff;
-    color: #0d1117;
+	background: #fff;
+	color: #0d1117;
 }
 
 ::-webkit-scrollbar { width: 1rem;}
@@ -47,70 +48,73 @@ body {
 ::-webkit-resizer               
 */
 #navbar {
-    background: #161b22;
-    color: #fff;
-    font-weight: 700;
-    overflow: hidden;
+	background: #161b22;
+	color: #fff;
+	font-weight: 700;
+	overflow: hidden;
 }
 #navbar h1{
-    padding: 9px 33px;
-    border-bottom: none;
-    margin-bottom: 0;
+	padding: 9px 33px;
+	border-bottom: none;
+	margin-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #credits {
-    line-height: 22px;
-    font-weight: 500;
-    font-size: 14px;
-    color:#8b949e;
+	line-height: 22px;
+	font-weight: 500;
+	font-size: 14px;
+	color:#8b949e;
 }
 .markdown {
-    font-size: 1rem;
-    padding: 1rem 15px;
-    margin: 0 auto;
+	font-size: 1rem;
+	padding: 1rem 15px;
+	margin: 0 auto;
 }
 
 table {
-    width: 100%;
-    margin: .5rem 0;
-    border-spacing: 0;
-    border: 1px solid #30363d;
-    border-radius: 4px;
-    display: block;
+	width: 100%;
+	margin: .5rem 0;
+	border-spacing: 0;
+	border: 1px solid #30363d;
+	border-radius: 4px;
+	display: block;
 }
 
 thead {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 td {
-    padding: .6rem;
-    border-left: #30363d 1px solid;
-    text-align: center;
-    width: 1%;
+	padding: .6rem;
+	border-left: #30363d 1px solid;
+	text-align: center;
+	width: 1%;
 }
 
 td:first-child {
-    position: relative;
-    border-left: none;
-    text-align: left;
+	position: relative;
+	border-left: none;
+	text-align: left;
 }
 td {
-    border-top: #30363d 1px solid;
+	border-top: #30363d 1px solid;
 }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-weight: 600
+	font-weight: 600
 }
 h1, h2, h3 {
-    padding: 1rem 0 0.3em;
-    margin-bottom: 1rem;
-    border-bottom: #30363d 1px solid;
+	padding: 1rem 0 0.3em;
+	margin-bottom: 1rem;
+	border-bottom: #30363d 1px solid;
 }
 
 h4, h5, h6 {
-    padding: .5rem 0;
+	padding: .5rem 0;
 }
 
 h1, .h1 { font-size: calc(1.375rem + 1.5vw) }
@@ -121,27 +125,27 @@ h5, .h5 { font-size: 1.25rem }
 h6, .h6 { font-size: 1rem }
 
 details {
-    display: block;
+	display: block;
 }
 
 details > summary:first-of-type {
-    display: list-item;
-    counter-increment: list-item 0;
-    list-style: inside disclosure-closed;
+	display: list-item;
+	counter-increment: list-item 0;
+	list-style: inside disclosure-closed;
 }
 
 summary {
-    display: block;
-    padding: 0;
-    font-size: calc(1.275rem + .3vw);
-    font-weight: 700;
-    cursor: pointer;
+	display: block;
+	padding: 0;
+	font-size: calc(1.275rem + .3vw);
+	font-weight: 700;
+	cursor: pointer;
 }
 
 hr {
-    border: 0;
-    border-top: solid #30363d 1px;
-    margin: 15px 0;
+	border: 0;
+	border-top: solid #30363d 1px;
+	margin: 15px 0;
 }
 
 p { padding: 8px 0 }
@@ -149,8 +153,8 @@ p { padding: 8px 0 }
 b { font-weight: 700 }
 
 ins { 
-    text-decoration: dotted underline;
-    text-underline-position: under;
+	text-decoration: dotted underline;
+	text-underline-position: under;
 }
 
 dl, ol, ul { margin: 1rem calc(1.5rem + .5vw) }
@@ -158,105 +162,105 @@ dl, ol, ul { margin: 1rem calc(1.5rem + .5vw) }
 dd, li { margin: 0 0 5px }
 
 code, .code, kbd, pre, samp {
-    background: #161b22;
-    color: #F8F8F0;
-    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+	background: #161b22;
+	color: #F8F8F0;
+	font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
 }
 
 pre {
-    padding: 4px 10px;
-    margin: 0.6rem 0px;
-    overflow-y: auto;
-    max-height: 80vh;
+	padding: 4px 10px;
+	margin: 0.6rem 0px;
+	overflow-y: auto;
+	max-height: 80vh;
 }
 
 code, .code {
-    white-space: pre;
-    padding: 2px 5px;
-    border-radius: 3px;
-    margin: 0 2px;
+	white-space: pre;
+	padding: 2px 5px;
+	border-radius: 3px;
+	margin: 0 2px;
 }
 
 textarea{
-    font-size: 1rem;
-    padding: 0.5rem;
+	font-size: 1rem;
+	padding: 0.5rem;
 }
 
 img {
-    max-height : 100%;
-    max-width : 100%;
-    width : auto;
-    height : auto;
+	max-height : 100%;
+	max-width : 100%;
+	width : auto;
+	height : auto;
 }
 td img {
-    margin: 0;
+	margin: 0;
 }
 
 .center img, .l img, .c img, .r img {
-    margin: 0.5rem 0;
+	margin: 0.5rem 0;
 }
 
 a, a *{
-    color: #00a2e8;
-    text-decoration: none;
-    font-weight: 500;
+	color: #00a2e8;
+	text-decoration: none;
+	font-weight: 500;
 }
 a:hover {
-    text-decoration: underline
+	text-decoration: underline
 }
 
 #alinks {
-    display: none;
-    text-decoration: none!important;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    color: white;
-    background: #3b454e;
-    padding: 0 0.3rem;
-    padding-bottom: 3px;
-    text-transform: lowercase;
-    font-weight: lighter;
-    border-radius: 0 3px 0 0;
-    font-size: 0.87rem;
+	display: none;
+	text-decoration: none!important;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	color: white;
+	background: #3b454e;
+	padding: 0 0.3rem;
+	padding-bottom: 3px;
+	text-transform: lowercase;
+	font-weight: lighter;
+	border-radius: 0 3px 0 0;
+	font-size: 0.87rem;
 }
 
 blockquote {
-    padding: 5px 1rem;
-    margin: 5px 0;
-    border-left: #9e9e9e 4px solid;
+	padding: 5px 1rem;
+	margin: 5px 0;
+	border-left: #9e9e9e 4px solid;
 }
 
 .warning {
-    border-left: #ff5252 4px solid;
-    color: #ff5252;
+	border-left: #ff5252 4px solid;
+	color: #ff5252;
 }
 
 .info {
-    border-left: #448aff 4px solid;
-    color: #448aff;
+	border-left: #448aff 4px solid;
+	color: #448aff;
 }
 .success {
-    border-left: #00c853 4px solid;
-    color: #009688;
+	border-left: #00c853 4px solid;
+	color: #009688;
 }
 
 div.success, div.warning, div.info {
-    padding: 5px 1rem;
-    margin: 1rem 0;
-    display: block;
+	padding: 5px 1rem;
+	margin: 1rem 0;
+	display: block;
 }
 
 input {
-    border: none;
-    outline: none;
-    font-size: 1rem;
-    width: 100%;
-    padding: 1rem;
-    background: none;
-    transform: translate(-0.6rem, 0rem);
-    transform: translate(-1rem, -1.5rem);
-    position: absolute;
+	border: none;
+	outline: none;
+	font-size: 1rem;
+	width: 100%;
+	padding: 1rem;
+	background: none;
+	transform: translate(-0.6rem, 0rem);
+	transform: translate(-1rem, -1.5rem);
+	position: absolute;
 }
 
 .labels { color: #009688 }
@@ -284,31 +288,30 @@ input {
 .cols-6 { columns: 6 auto}
 
 @media (min-width:576px) {
-    .markdown { max-width: 540px }
-    .cols-sm-2 { columns: 2 auto}
-    .cols-sm-3 { columns: 3 auto}
-    .cols-sm-4 { columns: 4 auto}
-    .cols-sm-6 { columns: 6 auto}
+	.markdown { max-width: 87.7% }
+	.cols-sm-2 { columns: 2 auto}
+	.cols-sm-3 { columns: 3 auto}
+	.cols-sm-4 { columns: 4 auto}
+	.cols-sm-6 { columns: 6 auto}
 }
 @media (min-width:768px) {
-    .markdown { max-width: 720px }
-    .col-md-3 { flex: 0 0 auto; width: 25% }
-    .col-md-9 { flex: 0 0 auto; width: 75% }
+	.col-md-3 { flex: 0 0 auto; width: 25% }
+	.col-md-9 { flex: 0 0 auto; width: 75% }
 }
 @media (min-width:992px) {
-    .markdown { max-width: 960px }
 }
 @media (min-width:1200px) {
-    .markdown { max-width: 1140px }
-    h1 { font-size: 2.5rem }
-    h2 { font-size: 2rem }
-    h3 { font-size: 1.75rem }
-    h4 { font-size: 1.5rem }
-    .col-xl-2 { flex: 0 0 auto; width: 16.66666667% }
-    .col-xl-10 { flex: 0 0 auto; width: 83.33333333% }
+	h1 { font-size: 2.5rem }
+	h2 { font-size: 2rem }
+	h3 { font-size: 1.75rem }
+	h4 { font-size: 1.5rem }
+	.col-xl-2 { flex: 0 0 auto; width: 16.66666667% }
+	.col-xl-10 { flex: 0 0 auto; width: 83.33333333% }
 }
 @media (min-width:1400px) {
-    .markdown { max-width: 1320px }
+}
+@media (min-width:1600px) {
+	.markdown { max-width: 90% }
 }
 
 .center, .c { text-align: center }
@@ -330,7 +333,6 @@ input {
 .d-block {display: block}
 .d-flex {display: flex}
 .d-inline-block {display: inline-block}
-
 
 .w-100{width: 100%}
 .h-43 {height:43vh}
@@ -360,3 +362,10 @@ input {
 .bg-purple { background:#e040fb }
 .gray { color:#9e9e9e }
 .bg-gray { background:#9e9e9e }
+
+#CHANGE {
+	background: none;
+	border: none;
+	cursor: pointer;
+    max-height: 48px;
+}
