--- a/style/style.css
+++ b/style/style.css
@@ -309,6 +309,8 @@ input[type='checkbox']{
 .variables { color: #7091a0 }
 .strings,
 .strings * { color: #ffd54f }
+.opcodes,
+.opcodes * { color: #F8F8F0; text-transform: uppercase;}
 .comments,
 .comments * { color: #919191 }
 .directives,
@@ -318,103 +320,20 @@ input[type='checkbox']{
 	flex: 0 0 auto;
 }
 
-.col-1 { width: 8.33333333% }
-.col-2 { width: 16.66666667% }
-.col-3 { width: 25% }
-.col-4 { width: 33.33333333% }
-.col-5 { width: 41.66666667% }
-.col-6 { width: 50% }
-.col-7 { width: 58.33333333% }
-.col-8 { width: 66.66666667% }
-.col-9 { width: 75% }
-.col-10 { width: 83.33333333% }
-.col-11 { width: 91.66666667% }
-.col-12 { width: 100% }
-
-.cols-2 { columns: 2 auto}
-.cols-3 { columns: 3 auto}
-.cols-4 { columns: 4 auto}
-.cols-6 { columns: 6 auto}
-
 @media (min-width:576px) {
 	.markdown { max-width: 87.7% }
-	.cols-sm-2 { columns: 2 auto}
-	.cols-sm-3 { columns: 3 auto}
-	.cols-sm-4 { columns: 4 auto}
-	.cols-sm-6 { columns: 6 auto}
-
-	.col-sm-1 { width: 8.33333333% }
-	.col-sm-2 { width: 16.66666667% }
-	.col-sm-3 { width: 25% }
-	.col-sm-4 { width: 33.33333333% }
-	.col-sm-5 { width: 41.66666667% }
-	.col-sm-6 { width: 50% }
-	.col-sm-7 { width: 58.33333333% }
-	.col-sm-8 { width: 66.66666667% }
-	.col-sm-9 { width: 75% }
-	.col-sm-10 { width: 83.33333333% }
-	.col-sm-11 { width: 91.66666667% }
-	.col-sm-12 { width: 100% }
 }
 @media (min-width:768px) {
-	.col-md-1 { width: 8.33333333% }
-	.col-md-2 { width: 16.66666667% }
-	.col-md-3 { width: 25% }
-	.col-md-4 { width: 33.33333333% }
-	.col-md-5 { width: 41.66666667% }
-	.col-md-6 { width: 50% }
-	.col-md-7 { width: 58.33333333% }
-	.col-md-8 { width: 66.66666667% }
-	.col-md-9 { width: 75% }
-	.col-md-10 { width: 83.33333333% }
-	.col-md-11 { width: 91.66666667% }
-	.col-md-12 { width: 100% }
 }
 @media (min-width:992px) {
-	.col-lg-1 { width: 8.33333333% }
-	.col-lg-2 { width: 16.66666667% }
-	.col-lg-3 { width: 25% }
-	.col-lg-4 { width: 33.33333333% }
-	.col-lg-5 { width: 41.66666667% }
-	.col-lg-6 { width: 50% }
-	.col-lg-7 { width: 58.33333333% }
-	.col-lg-8 { width: 66.66666667% }
-	.col-lg-9 { width: 75% }
-	.col-lg-10 { width: 83.33333333% }
-	.col-lg-11 { width: 91.66666667% }
-	.col-lg-12 { width: 100% }
 }
 @media (min-width:1200px) {
 	h1 { font-size: 2.5rem }
 	h2 { font-size: 2rem }
 	h3 { font-size: 1.75rem }
 	h4 { font-size: 1.5rem }
-	.col-xl-1 { width: 8.33333333% }
-	.col-xl-2 { width: 16.66666667% }
-	.col-xl-3 { width: 25% }
-	.col-xl-4 { width: 33.33333333% }
-	.col-xl-5 { width: 41.66666667% }
-	.col-xl-6 { width: 50% }
-	.col-xl-7 { width: 58.33333333% }
-	.col-xl-8 { width: 66.66666667% }
-	.col-xl-9 { width: 75% }
-	.col-xl-10 { width: 83.33333333% }
-	.col-xl-11 { width: 91.66666667% }
-	.col-xl-12 { width: 100% }
 }
 @media (min-width:1400px) {
-	.col-xxl-1 { width: 8.33333333% }
-	.col-xxl-2 { width: 16.66666667% }
-	.col-xxl-3 { width: 25% }
-	.col-xxl-4 { width: 33.33333333% }
-	.col-xxl-5 { width: 41.66666667% }
-	.col-xxl-6 { width: 50% }
-	.col-xxl-7 { width: 58.33333333% }
-	.col-xxl-8 { width: 66.66666667% }
-	.col-xxl-9 { width: 75% }
-	.col-xxl-10 { width: 83.33333333% }
-	.col-xxl-11 { width: 91.66666667% }
-	.col-xxl-12 { width: 100% }
 }
 @media (min-width:1600px) {
 	.markdown { max-width: 90% }
@@ -428,48 +347,6 @@ input[type='checkbox']{
 .bold { font-weight: 700 }
 
 .uppercase { text-transform: uppercase }
-.r-0 { border-radius: 0 }
-.r-1 { border-radius: .25rem }
-.r-2 { border-radius: .5rem }
-.r-3 { border-radius: 1rem }
-.r-4 { border-radius: 1.5rem }
-.r-5 { border-radius: 3rem }
-.p-0 { padding: 0 }
-.p-1 { padding: .25rem }
-.p-2 { padding: .5rem }
-.p-3 { padding: 1rem }
-.p-4 { padding: 1.5rem }
-.p-5 { padding: 3rem }
-.py-0 { padding-top: 0; padding-bottom: 0 }
-.py-1 { padding-top: .25rem; padding-bottom: .25rem }
-.py-2 { padding-top: .5rem; padding-bottom: .5rem }
-.py-3 { padding-top: 1rem; padding-bottom: 1rem }
-.py-4 { padding-top: 1.5rem; padding-bottom: 1.5rem }
-.py-5 { padding-top: 3rem; padding-bottom: 3rem }
-.px-0 { padding-top: 0; padding-bottom: 0 }
-.px-1 { padding-left: .25rem ; padding-right: .25rem}
-.px-2 { padding-left: .5rem ; padding-right: .5rem}
-.px-3 { padding-left: 1rem ; padding-right: 1rem}
-.px-4 { padding-left: 1.5rem ; padding-right: 1.5rem}
-.px-5 { padding-left: 3rem ; padding-right: 3rem}
-.m-0 { margin: 0 }
-.m-1 { margin: .25rem }
-.m-2 { margin: .5rem }
-.m-3 { margin: 1rem }
-.m-4 { margin: 1.5rem }
-.m-5 { margin: 3rem }
-.my-0 { margin-top: 0; margin-bottom: 0 }
-.my-1 { margin-top: .25rem; margin-bottom: .25rem }
-.my-2 { margin-top: .5rem; margin-bottom: .5rem }
-.my-3 { margin-top: 1rem; margin-bottom: 1rem }
-.my-4 { margin-top: 1.5rem; margin-bottom: 1.5rem }
-.my-5 { margin-top: 3rem; margin-bottom: 3rem }
-.mx-0 { margin-top: 0; margin-bottom: 0 }
-.mx-1 { margin-left: .25rem ; margin-right: .25rem}
-.mx-2 { margin-left: .5rem ; margin-right: .5rem}
-.mx-3 { margin-left: 1rem ; margin-right: 1rem}
-.mx-4 { margin-left: 1.5rem ; margin-right: 1.5rem}
-.mx-5 { margin-left: 3rem ; margin-right: 3rem}
 
 .d-none {display: none}
 .d-block {display: block}
